--- a/docs/s3.md
+++ b/docs/s3.md
@@ -1,4 +1,4 @@
-[AWS S3](https://aws.amazon.com/s3/) is an object storage service offering industry-leading scalability, data availability, security, and performance. The S3 wrapper only supports data read at this moment and below are the 2 data file formats supported:
+[AWS S3](https://aws.amazon.com/s3/) is an object storage service offering industry-leading scalability, data availability, security, and performance. The S3 wrapper is under development. It is read-only and supports 2 file formats:
 
 1. CSV - with or without header line
 2. [JSON Lines](https://jsonlines.org/)
