--- a/docs/s3.md
+++ b/docs/s3.md
@@ -65,7 +65,7 @@ create server s3_server
   );
 ```
 
-#### Auth (Insecure)
+#### Auth (Non-Supabase)
 
 If the platform you are using does not support `pgsodium` and `Vault`, you can create a server by storing yourt AWS credentials directly.
 
