--- a/docs/s3.md
+++ b/docs/s3.md
@@ -134,7 +134,7 @@ create foreign table s3_table_jsonl (
   );
 
 -- GZIP compressed CSV file
-create foreign table s3_table_csv_zip (
+create foreign table s3_table_csv_gzip (
   name text,
   sex text,
   age text,
@@ -146,7 +146,7 @@ create foreign table s3_table_csv_zip (
     uri 's3://bucket/s3_table.csv.gz',
     format 'csv',
     has_header 'true',
-    compress 'gz'
+    compress 'gzip'
   );
 ```
 
