--- a/docs/s3.md
+++ b/docs/s3.md
@@ -67,7 +67,7 @@ create server s3_server
 
 #### Auth (Non-Supabase)
 
-If the platform you are using does not support `pgsodium` and `Vault`, you can create a server by storing yourt AWS credentials directly.
+If the platform you are using does not support `pgsodium` and `Vault`, you can create a server by storing your AWS credentials directly.
 
 
 !!! important
