--- a/docs/s3.md
+++ b/docs/s3.md
@@ -121,7 +121,7 @@ For Parquet file, no need to define all columns in the foreign table but column 
 The full list of foreign table options are below:
 
 - `uri` - S3 URI, required. For example, `s3://bucket/s3_table.csv`
-- `format` - File format, required. `csv`, `jsonl` or `parquet`
+- `format` - File format, required. `csv`, `jsonl`, or `parquet`
 - `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
 - `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
 
