docs: reformating docs for supabase federated docs

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -1,23 +1,25 @@
-[AWS S3](https://aws.amazon.com/s3/) is an object storage service offering industry-leading scalability, data availability, security, and performance. The S3 wrapper is under development. It is read-only and supports below file formats:
+[AWS S3](https://aws.amazon.com/s3/) is an object storage service offering industry-leading scalability, data availability, security, and performance. It is read-only and supports below file formats:
+
+The S3 Wrapper allows you to read data of below formats from S3 within your Postgres database.
 
 1. CSV - with or without header line
 2. [JSON Lines](https://jsonlines.org/)
 3. [Parquet](https://parquet.apache.org/)
 
-The S3 FDW also supports below compression algorithms:
+The S3 Wrapper also supports below compression algorithms:
 
 1. gzip
 2. bzip2
 3. xz
 4. zlib
 
-**Note for CSV and JSONL files: currently all columns in S3 files must be defined in the foreign table and their types must be `text` type**
+**Note for CSV and JSONL files: currently all columns in S3 files must be defined in the foreign table and their types must be `text` type**.
 
-**Note for Parquet files: the whole Parquet file will be loaded into local memory if it is compressed, so keep its size small**
+**Note for Parquet files: the whole Parquet file will be loaded into local memory if it is compressed, so keep the file size as small as possible**.
 
 ### Supported Data Types For Parquet File
 
-The S3 FDW uses Parquet file data types from [arrow_array::types](https://docs.rs/arrow-array/41.0.0/arrow_array/types/index.html), below are their mappings to Postgres data types.
+The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://docs.rs/arrow-array/41.0.0/arrow_array/types/index.html), below are their mappings to Postgres data types.
 
 | Postgres Type      | Parquet Type             |
 | ------------------ | ------------------------ |
@@ -33,90 +35,107 @@ The S3 FDW uses Parquet file data types from [arrow_array::types](https://docs.r
 | date               | Date64Type               |
 | timestamp          | TimestampNanosecondType  |
 
-### Wrapper 
-To get started with the S3 wrapper, create a foreign data wrapper specifying `handler` and `validator` as below.
+## Preparation
+
+Before you get started, make sure the `wrappers` extension is installed on your database:
 
 ```sql
 create extension if not exists wrappers;
+```
 
+and then create the foreign data wrapper:
+
+```sql
 create foreign data wrapper s3_wrapper
   handler s3_fdw_handler
   validator s3_fdw_validator;
 ```
 
-### Server 
+### Secure your credentials (optional)
 
-Next, we need to create a server for the FDW to hold options and credentials.
+By default, Postgres stores FDW credentials inide `pg_catalog.pg_foreign_server` in plain text. Anyone with access to this table will be able to view these credentials. Wrappers is designed to work with [Vault](https://supabase.com/docs/guides/database/vault), which provides an additional level of security for storing credentials. We recommend using Vault to store your credentials.
 
-#### Auth (Supabase)
-
-If you are using the Supabase platform, this is the recommended approach for securing your AWS credentials.
-
-For example, to store AWS access key id to `vault_access_key_id` in Vault:
-
-Create a secure key using pgsodium
 ```sql
+-- Create a secure key using pgsodium:
 select pgsodium.create_key(name := 'vault_access_key_id');
+select pgsodium.create_key(name := 'vault_secret_access_key');
+
+-- Save your AWS credential in Vault and retrieve the `key_id`
+insert into vault.secrets (secret, key_id)
+values (
+  '<access key id>',
+  (select id from pgsodium.valid_key where name = 'vault_access_key_id')
+)
+returning key_id;
+
+insert into vault.secrets (secret, key_id)
+values (
+  '<secret access key>',
+  (select id from pgsodium.valid_key where name = 'vault_secret_access_key')
+)
+returning key_id;
 ```
 
-Save your credential in Vault and retrieve the `key_id`
+### Connecting to S3
+
+We need to provide Postgres with the credentials to connect to S3, and any additional options. We can do this using the `create server` command:
+
+=== "With Vault"
+
+    ```sql
+    create server s3_server
+      foreign data wrapper s3_wrapper
+      options (
+        vault_access_key_id '<your vault_access_key_id from above>',
+        vault_secret_access_key '<your vault_secret_access_key_id from above>',
+        aws_region 'us-east-1'
+      );
+    ```
+
+=== "Without Vault"
+
+    ```sql
+    create server s3_server
+      foreign data wrapper s3_wrapper
+      options (
+        aws_access_key_id 'your_aws_access_key_id',
+        aws_secret_access_key 'your_aws_secret_access_key',
+        aws_region 'us-east-1'
+      );
+    ```
+
+## Creating Foreign Tables
+
+The S3 Wrapper supports data reads from S3.
+
+| Integration | Select            | Insert            | Update            | Delete            | Truncate          |
+| ----------- | :----:            | :----:            | :----:            | :----:            | :----:            |
+| S3          | :white_check_mark:| :x:               | :x:               | :x:               | :x:               |
+
+For example:
+
 ```sql
-insert into
-  vault.secrets (secret, key_id)
-values 
-  (
-    'AKIAXXXXXX',
-    (select id from pgsodium.valid_key where name = 'vault_access_key_id')
-  )
-returning
-  key_id;
-```
-
-You can follow the same steps to store `vault_secret_access_key` in Vault.
-
-Then create the foreign server
-
-```sql
-create server s3_server
-  foreign data wrapper s3_wrapper
+create foreign table s3_table_csv (
+  name text,
+  sex text,
+  age text,
+  height text,
+  weight text
+)
+  server s3_server
   options (
-    vault_access_key_id '<your vault_access_key_id from above>',
-    vault_secret_access_key '<your vault_secret_access_key_id from above>',
-    aws_region 'us-east-1'
+    uri 's3://bucket/s3_table.csv',
+    format 'csv',
+    has_header 'true'
   );
 ```
-
-#### Auth (Non-Supabase)
-
-If the platform you are using does not support `pgsodium` and `Vault`, you can create a server by storing your AWS credentials directly.
-
-
-!!! important
-
-    Credentials stored using this method can be viewed as plain text by anyone with access to `pg_catalog.pg_foreign_server`
-
-
-```sql
-create server s3_server
-  foreign data wrapper s3_wrapper
-   options (
-    aws_access_key_id 'your_aws_access_key_id',
-    aws_secret_access_key 'your_aws_secret_access_key',
-    aws_region 'us-east-1'
-   );
-```
-
-
-### Tables
-
-S3 wrapper is implemented with [ELT](https://hevodata.com/learn/etl-vs-elt/) approach, so the data transformation is encouraged to be performed locally after data is extracted from remote data source.
 
 One file in S3 corresponds a foreign table in Postgres. For CSV and JSONL file, all columns must be present in the foreign table and type must be `text`. You can do custom transformations, like type conversion, by creating a view on top of the foreign table or using a subquery.
 
 For Parquet file, no need to define all columns in the foreign table but column names must match between Parquet file and its foreign table.
 
 
-#### Foreign Table Options
+### Foreign Table Options
 
 The full list of foreign table options are below:
 
@@ -125,7 +144,13 @@ The full list of foreign table options are below:
 - `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
 - `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
 
-#### Examples
+## Examples
+
+Some examples on how to use S3 foreign tables.
+
+### Basic example
+
+This will create some "foreign table" inside your Postgres database can read data from S3:
 
 ```sql
 -- CSV file, no compression
