docs: unify title sizes

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -17,7 +17,7 @@ The S3 Wrapper also supports below compression algorithms:
 
 **Note for Parquet files: the whole Parquet file will be loaded into local memory if it is compressed, so keep the file size as small as possible**.
 
-### Supported Data Types For Parquet File
+## Supported Data Types For Parquet File
 
 The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://docs.rs/arrow-array/41.0.0/arrow_array/types/index.html), below are their mappings to Postgres data types.
 
@@ -135,7 +135,7 @@ One file in S3 corresponds a foreign table in Postgres. For CSV and JSONL file, 
 For Parquet file, no need to define all columns in the foreign table but column names must match between Parquet file and its foreign table.
 
 
-### Foreign Table Options
+### Foreign table options
 
 The full list of foreign table options are below:
 
