docs: update vault credentials docs

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -56,22 +56,18 @@ create foreign data wrapper s3_wrapper
 By default, Postgres stores FDW credentials inide `pg_catalog.pg_foreign_server` in plain text. Anyone with access to this table will be able to view these credentials. Wrappers is designed to work with [Vault](https://supabase.com/docs/guides/database/vault), which provides an additional level of security for storing credentials. We recommend using Vault to store your credentials.
 
 ```sql
--- Create a secure key using pgsodium:
-select pgsodium.create_key(name := 'vault_access_key_id');
-select pgsodium.create_key(name := 'vault_secret_access_key');
-
 -- Save your AWS credential in Vault and retrieve the `key_id`
-insert into vault.secrets (secret, key_id)
+insert into vault.secrets (name, secret)
 values (
-  '<access key id>',
-  (select id from pgsodium.valid_key where name = 'vault_access_key_id')
+  'vault_access_key_id',
+  '<access key id>'
 )
 returning key_id;
 
-insert into vault.secrets (secret, key_id)
+insert into vault.secrets (name, secret)
 values (
-  '<secret access key>',
-  (select id from pgsodium.valid_key where name = 'vault_secret_access_key')
+  'vault_secret_access_key',
+  '<secret access key>'
 )
 returning key_id;
 ```
@@ -87,7 +83,7 @@ We need to provide Postgres with the credentials to connect to S3, and any addit
       foreign data wrapper s3_wrapper
       options (
         vault_access_key_id '<your vault_access_key_id from above>',
-        vault_secret_access_key '<your vault_secret_access_key_id from above>',
+        vault_secret_access_key '<your vault_secret_access_key from above>',
         aws_region 'us-east-1'
       );
     ```
