docs: add extension creation schema

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -40,7 +40,7 @@ The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://do
 Before you get started, make sure the `wrappers` extension is installed on your database:
 
 ```sql
-create extension if not exists wrappers;
+create extension if not exists wrappers with schema extensions;
 ```
 
 and then create the foreign data wrapper:
