docs: add pushdown support docs

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -140,6 +140,10 @@ The full list of foreign table options are below:
 - `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
 - `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
 
+## Query Pushdown Support
+
+This FDW doesn't support query pushdown.
+
 ## Examples
 
 Some examples on how to use S3 foreign tables.
