feat: add timestamp with time zone cell type support

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -34,6 +34,7 @@ The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://do
 | text             | ByteArrayType           |
 | date             | Date64Type              |
 | timestamp        | TimestampNanosecondType |
+| timestamptz      | TimestampNanosecondType |
 
 ## Preparation
 
