docs: add warnings in docs and readme about using materialized views

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -17,6 +17,10 @@ The S3 Wrapper also supports below compression algorithms:
 
 **Note for Parquet files: the whole Parquet file will be loaded into local memory if it is compressed, so keep the file size as small as possible**.
 
+!!! warning
+
+    Restoring a logical backup of a database with a materialized view using a foreign table can fail. For this reason, either do not use foreign tables in materialized views or use them in databases with physical backups enabled.
+
 ## Supported Data Types For Parquet File
 
 The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://docs.rs/arrow-array/41.0.0/arrow_array/types/index.html), below are their mappings to Postgres data types.
