a complete refactor of the docs

--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -1,3 +1,14 @@
+---
+source:
+documentation:
+author: supabase
+tags:
+  - native
+  - official
+---
+
+# AWS S3
+
 [AWS S3](https://aws.amazon.com/s3/) is an object storage service offering industry-leading scalability, data availability, security, and performance. It is read-only and supports below file formats:
 
 The S3 Wrapper allows you to read data of below formats from S3 within your Postgres database.
@@ -106,6 +117,7 @@ We need to provide Postgres with the credentials to connect to S3, and any addit
     ```
 
 The full list of options are below:
+
 - `aws_access_key_id` (required) - Your access key
 - `aws_secret_access_key` (required) - Your secret key
 - `aws_region` (required) - The region of your bucket (if providing an endpoint URL with a region in it, make sure that they are the same)
