fix(s3_fdw): access Supabase storage

--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -122,18 +122,45 @@ The full list of options are below:
 - `aws_secret_access_key` (required) - Your secret key
 - `aws_region` (required) - The region of your bucket (if providing an endpoint URL with a region in it, make sure that they are the same)
 - `endpoint_url` (optional) - An optional URL to allow connection to S3-compliant providers (i.e. Wasabi, Cloudflare R2, Backblaze B2, DigitalOcean Spaces)
+- `path_style_url` (optional) - Whether to use [path-style URL](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html#path-style-access) access. This is required by some S3-compliant providers. `true` or `false`, default is `false`.
+
+### Required S3 permissions
+
+Below S3 permissions are needed:
+
+- s3:GetObject
+- s3:GetObjectAttributes
+
+If the bucket is versioned, we also need:
+
+- s3:GetObjectVersion
+- s3:GetObjectVersionAttributes
+
+### Connecting to S3-compliant Providers - Supabase Storage
+
+```sql
+create server s3_server
+  foreign data wrapper s3_wrapper
+  options (
+    aws_access_key_id '<supabase_storage_access_key>',
+    aws_secret_access_key '<supabase_storage_secret_key>',
+    aws_region 'eu-central-1',
+    endpoint_url 'https://<project_ref>.supabase.co/storage/v1/s3',
+    path_style_url 'true'
+  );
+```
 
 ### Connecting to S3-compliant Providers - Wasabi
 
 ```sql
 create server s3_server
-      foreign data wrapper s3_wrapper
-      options (
-        aws_access_key_id 'you_wasabi_access_key',
-        aws_secret_access_key 'your_wasabi_secret_access_key',
-        aws_region 'eu-central-1',
-        endpoint_url 'https://s3.eu-central-1.wasabisys.com'
-      );
+  foreign data wrapper s3_wrapper
+  options (
+    aws_access_key_id '<your_wasabi_access_key>',
+    aws_secret_access_key '<your_wasabi_secret_key>',
+    aws_region 'eu-central-1',
+    endpoint_url 'https://s3.eu-central-1.wasabisys.com'
+  );
 ```
 
 ## Creating Foreign Tables
@@ -264,3 +291,31 @@ create foreign table s3_table_parquet_gz (
     compress 'gzip'
   );
 ```
+
+### Read from Supabase Storage
+
+This example will read a CSV file stored on Supabase Storage. The access information can be found on [Supabase Storage settings page](https://supabase.com/dashboard/project/_/settings/storage).
+
+```sql
+create server s3_server
+  foreign data wrapper s3_wrapper
+  options (
+    aws_access_key_id '<access key ID>',
+    aws_secret_access_key '<secret access key>',
+    aws_region '<region>',
+	endpoint_url 'https://<project_ref>.supabase.co/storage/v1/s3',
+    path_style_url 'true'
+  );
+
+create foreign table s3_table_csv (
+  id text,
+  name text
+)
+  server s3_server
+  options (
+    uri 's3://mybucket/myfile.csv',
+    format 'csv',
+    has_header 'true'
+  );
+```
+
