small re-ordering

--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -159,6 +159,13 @@ We recommend creating a schema to hold all the foreign tables:
 create schema s3;
 ```
 
+## Options
+
+- `uri` - S3 URI, required. For example, `s3://bucket/s3_table.csv`
+- `format` - File format, required. `csv`, `jsonl`, or `parquet`
+- `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
+- `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
+
 ## Entities
 
 ### CSV Files
@@ -171,7 +178,7 @@ Ref: [AWS S3 docs](https://aws.amazon.com/s3/)
 
 | Object | Select | Insert | Update | Delete | Truncate |
 | ------ | :----: | :----: | :----: | :----: | :------: |
-| CSV    |   ✅   |   ❌   |   ❌   |   ❌   |    ❌    |
+| CSV    |   ✅    |   ❌    |   ❌    |   ❌    |    ❌     |
 
 #### Usage
 
@@ -208,7 +215,7 @@ Ref: [JSONL docs](https://jsonlines.org/)
 
 | Object | Select | Insert | Update | Delete | Truncate |
 | ------ | :----: | :----: | :----: | :----: | :------: |
-| JSONL  |   ✅   |   ❌   |   ❌   |   ❌   |    ❌    |
+| JSONL  |   ✅    |   ❌    |   ❌    |   ❌    |    ❌     |
 
 #### Usage
 
@@ -244,7 +251,7 @@ Ref: [Parquet docs](https://parquet.apache.org/)
 
 | Object  | Select | Insert | Update | Delete | Truncate |
 | ------- | :----: | :----: | :----: | :----: | :------: |
-| Parquet |   ✅   |   ❌   |   ❌   |   ❌   |    ❌    |
+| Parquet |   ✅    |   ❌    |   ❌    |   ❌    |    ❌     |
 
 #### Usage
 
@@ -271,13 +278,6 @@ create foreign table s3_table_parquet (
 - Supports various Postgres data types (see Data Types section)
 - Compressed files are loaded entirely into memory
 - Supports compression (gzip, bzip2, xz, zlib)
-
-## Foreign Table Options
-
-- `uri` - S3 URI, required. For example, `s3://bucket/s3_table.csv`
-- `format` - File format, required. `csv`, `jsonl`, or `parquet`
-- `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
-- `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
 
 ## Query Pushdown Support
 
