--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -94,7 +94,9 @@ values (
 returning key_id;
 ```
 
-Once you have stored your credentials, you can create a server to connect to S3:
+### Connecting to S3
+
+We need to provide Postgres with the credentials to connect to S3, and any additional options. We can do this using the `create server` command:
 
 === "With Vault"
 
@@ -120,7 +122,7 @@ Once you have stored your credentials, you can create a server to connect to S3:
       );
     ```
 
-The following options are available:
+The full list of options are below:
 
 - `aws_access_key_id` (required) - Your access key
 - `aws_secret_access_key` (required) - Your secret key
@@ -128,7 +130,33 @@ The following options are available:
 - `endpoint_url` (optional) - An optional URL to allow connection to S3-compliant providers (i.e. Wasabi, Cloudflare R2, Backblaze B2, DigitalOcean Spaces)
 - `path_style_url` (optional) - Whether to use [path-style URL](https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html#path-style-access) access. This is required by some S3-compliant providers. `true` or `false`, default is `false`.
 
-For S3-compliant providers like Wasabi, you can use the following configuration:
+#### Required S3 permissions
+
+Below S3 permissions are needed:
+
+- s3:GetObject
+- s3:GetObjectAttributes
+
+If the bucket is versioned, we also need:
+
+- s3:GetObjectVersion
+- s3:GetObjectVersionAttributes
+
+### Connecting to S3-compliant Providers - Supabase Storage
+
+```sql
+create server s3_server
+  foreign data wrapper s3_wrapper
+  options (
+    aws_access_key_id '<supabase_storage_access_key>',
+    aws_secret_access_key '<supabase_storage_secret_key>',
+    aws_region 'eu-central-1',
+    endpoint_url 'https://<project_ref>.supabase.co/storage/v1/s3',
+    path_style_url 'true'
+  );
+```
+
+### Connecting to S3-compliant Providers - Wasabi
 
 ```sql
 create server s3_server
@@ -141,25 +169,17 @@ create server s3_server
   );
 ```
 
-Required S3 permissions:
-
-- s3:GetObject
-- s3:GetObjectAttributes
-
-If the bucket is versioned, we also need:
-
-- s3:GetObjectVersion
-- s3:GetObjectVersionAttributes
-
 ### Create a schema
 
 We recommend creating a schema to hold all the foreign tables:
 
 ```sql
-create schema s3;
+create schema if not exists s3;
 ```
 
 ## Options
+
+The following options are available when creating S3 foreign tables:
 
 - `uri` - S3 URI, required. For example, `s3://bucket/s3_table.csv`
 - `format` - File format, required. `csv`, `jsonl`, or `parquet`
@@ -183,7 +203,7 @@ Ref: [AWS S3 docs](https://aws.amazon.com/s3/)
 #### Usage
 
 ```sql
-create foreign table s3_table_csv (
+create foreign table s3.table_csv (
   name text,
   sex text,
   age text,
@@ -220,7 +240,7 @@ Ref: [JSONL docs](https://jsonlines.org/)
 #### Usage
 
 ```sql
-create foreign table s3_table_jsonl (
+create foreign table s3.table_jsonl (
   name text,
   sex text,
   age text,
@@ -256,7 +276,7 @@ Ref: [Parquet docs](https://parquet.apache.org/)
 #### Usage
 
 ```sql
-create foreign table s3_table_parquet (
+create foreign table s3.table_parquet (
   id integer,
   bool_col boolean,
   bigint_col bigint,
@@ -291,7 +311,7 @@ This will create some "foreign table" inside your Postgres database can read dat
 
 ```sql
 -- CSV file, no compression
-create foreign table s3_table_csv (
+create foreign table s3.table_csv (
   name text,
   sex text,
   age text,
@@ -306,7 +326,7 @@ create foreign table s3_table_csv (
   );
 
 -- JSON line file, no compression
-create foreign table s3_table_jsonl (
+create foreign table s3.table_jsonl (
   name text,
   sex text,
   age text,
@@ -320,7 +340,7 @@ create foreign table s3_table_jsonl (
   );
 
 -- GZIP compressed CSV file
-create foreign table s3_table_csv_gzip (
+create foreign table s3.table_csv_gzip (
   name text,
   sex text,
   age text,
@@ -336,7 +356,7 @@ create foreign table s3_table_csv_gzip (
   );
 
 -- Parquet file, no compression
-create foreign table s3_table_parquet (
+create foreign table s3.table_parquet (
   id integer,
   bool_col boolean,
   bigint_col bigint,
@@ -351,7 +371,7 @@ create foreign table s3_table_parquet (
   );
 
 -- GZIP compressed Parquet file
-create foreign table s3_table_parquet_gz (
+create foreign table s3.table_parquet_gz (
   id integer,
   bool_col boolean,
   bigint_col bigint,
@@ -382,7 +402,7 @@ create server s3_server
     path_style_url 'true'
   );
 
-create foreign table s3_table_csv (
+create foreign table s3.supabase_table_csv (
   id text,
   name text
 )
