--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -28,10 +28,6 @@ The S3 Wrapper also supports below compression algorithms:
 
 **Note for Parquet files: the whole Parquet file will be loaded into local memory if it is compressed, so keep the file size as small as possible**.
 
-!!! warning
-
-    Restoring a logical backup of a database with a materialized view using a foreign table can fail. For this reason, either do not use foreign tables in materialized views or use them in databases with physical backups enabled.
-
 ## Preparation
 
 Before you can query S3, you need to enable the Wrappers extension and store your credentials in Postgres.
@@ -284,42 +280,6 @@ create foreign table s3.table_parquet (
 
 This FDW doesn't support query pushdown.
 
-## Limitations
-
-This section describes important limitations and considerations when using this FDW:
-
-- **Performance Limitations**:
-  - No query pushdown support, all filtering must be done locally
-  - Large result sets experience slower performance due to full data transfer requirement
-  - Network latency affects query response times based on S3 region
-  - Sequential scans required for all operations
-  - Performance varies with S3 service response times and throttling
-  - Compressed files may have additional processing overhead
-
-- **Feature Limitations**:
-  - Read-only operations supported (no INSERT, UPDATE, DELETE, or TRUNCATE)
-  - CSV and JSONL columns must be defined as text type only
-  - All columns must be defined in foreign tables for CSV and JSONL
-  - Column names must match exactly for Parquet files
-  - Limited to specific Parquet data type mappings
-  - No support for S3 Select or other S3-side filtering
-
-- **Resource Usage**:
-  - Compressed Parquet files are loaded entirely into memory
-  - Full result sets must be loaded into memory
-  - Memory usage scales with file size and compression ratio
-  - Network bandwidth consumption based on data transfer volume
-  - S3 API request quotas may affect operation
-  - No connection pooling or result caching
-
-- **Known Issues**:
-  - Materialized views using foreign tables may fail during logical backups
-  - S3 permissions require specific IAM configurations
-  - Path-style URL requirements vary by S3-compatible provider
-  - Some S3-compatible providers may have additional restrictions
-  - Error messages from S3 API may not preserve full context
-  - Time zone handling may require explicit conversion
-
 ## Supported Data Types For Parquet File
 
 The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://docs.rs/arrow-array/41.0.0/arrow_array/types/index.html), below are their mappings to Postgres data types.
@@ -338,6 +298,18 @@ The S3 Wrapper uses Parquet file data types from [arrow_array::types](https://do
 | date             | Date64Type              |
 | timestamp        | TimestampNanosecondType |
 | timestamptz      | TimestampNanosecondType |
+
+## Limitations
+
+This section describes important limitations and considerations when using this FDW:
+
+- Large result sets experience slower performance due to full data transfer requirement
+- Compressed files are loaded entirely into memory and have additional processing overhead
+- CSV and JSONL columns must be defined as `text` type only
+- All columns must be defined in foreign tables for CSV and JSONL
+- Column names must match exactly for Parquet files
+- No support for S3 Select or other S3-side filtering
+- Materialized views using these foreign tables may fail during logical backups
 
 ## Examples
 
