--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -55,20 +55,21 @@ create foreign data wrapper s3_wrapper
 By default, Postgres stores FDW credentials inside `pg_catalog.pg_foreign_server` in plain text. Anyone with access to this table will be able to view these credentials. Wrappers is designed to work with [Vault](https://supabase.com/docs/guides/database/vault), which provides an additional level of security for storing credentials. We recommend using Vault to store your credentials.
 
 ```sql
--- Save your AWS credential in Vault and retrieve the `key_id`
-insert into vault.secrets (name, secret)
-values (
-  'vault_access_key_id',
-  '<access key id>'
-)
-returning key_id;
-
-insert into vault.secrets (name, secret)
-values (
-  'vault_secret_access_key',
+-- Save your AWS credentials in Vault
+select vault.create_secret(
+  '<access key id>',
+  's3_access_key_id',
+  'AWS access key for Wrappers'
+);
+select vault.create_secret(
   '<secret access key>'
-)
-returning key_id;
+  's3_secret_access_key',
+  'AWS secret access key for Wrappers'
+);
+
+-- Retrieve the `key_id`
+select key_id from vault.decrypted_secrets where name = 's3_access_key_id';
+select key_id from vault.decrypted_secrets where name = 's3_secret_access_key';
 ```
 
 ### Connecting to S3
@@ -81,8 +82,8 @@ We need to provide Postgres with the credentials to connect to S3, and any addit
     create server s3_server
       foreign data wrapper s3_wrapper
       options (
-        vault_access_key_id '<your vault_access_key_id from above>',
-        vault_secret_access_key '<your vault_secret_access_key from above>',
+        vault_access_key_id '<your s3_access_key_id from above>',
+        vault_secret_access_key '<your s3_secret_access_key from above>',
         aws_region 'us-east-1'
       );
     ```
