docs: update docs for secret creation in vault

--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -55,7 +55,7 @@ create foreign data wrapper s3_wrapper
 By default, Postgres stores FDW credentials inside `pg_catalog.pg_foreign_server` in plain text. Anyone with access to this table will be able to view these credentials. Wrappers is designed to work with [Vault](https://supabase.com/docs/guides/database/vault), which provides an additional level of security for storing credentials. We recommend using Vault to store your credentials.
 
 ```sql
--- Save your AWS credentials in Vault
+-- Save your AWS credentials in Vault and retrieve the created `s3_access_key_id` and `s3_secret_access_key`
 select vault.create_secret(
   '<access key id>',
   's3_access_key_id',
@@ -66,10 +66,6 @@ select vault.create_secret(
   's3_secret_access_key',
   'AWS secret access key for Wrappers'
 );
-
--- Retrieve the `key_id`
-select key_id from vault.decrypted_secrets where name = 's3_access_key_id';
-select key_id from vault.decrypted_secrets where name = 's3_secret_access_key';
 ```
 
 ### Connecting to S3
