feat(s3): add csv delimiter table option

--- a/docs/catalog/s3.md
+++ b/docs/catalog/s3.md
@@ -159,6 +159,7 @@ The following options are available when creating S3 foreign tables:
 - `format` - File format, required. `csv`, `jsonl`, or `parquet`
 - `has_header` - If the CSV file has header, optional. `true` or `false`, default is `false`
 - `compress` - Compression algorithm, optional. One of `gzip`, `bzip2`, `xz`, `zlib`, default is no compression
+- `delimiter` - Field delimiter for CSV files, optional. Single character like `,`, `;`, `|`, or escaped sequence like `E'\t'` for tab, default is `,`
 
 ## Entities
 
@@ -189,6 +190,25 @@ create foreign table s3.table_csv (
     uri 's3://bucket/s3_table.csv',
     format 'csv',
     has_header 'true'
+  );
+```
+
+Using custom delimiter:
+
+```sql
+create foreign table s3.table_tsv (
+  name text,
+  sex text,
+  age text,
+  height text,
+  weight text
+)
+  server s3_server
+  options (
+    uri 's3://bucket/s3_table.tsv',
+    format 'csv',
+    delimiter E'\t',  -- Tab-separated values
+    has_header 'false'
   );
 ```
 
